# Dual_UR_Arm_CAR

./: README.md  README_ch.md  README_en.md
dual_ur_moveit_api/: CMakeLists.txt  package.xml
dual_ur_moveit_api/include/: halcon.h
dual_ur_moveit_api/launch/: dual_ur_moveit_api.launch.py
dual_ur_moveit_api/src/: api_control.cpp  halcon.cpp
dual_ur_moveit_config/: CMakeLists.txt  package.xml  setup_assistant
dual_ur_moveit_config/config/: controllers.yaml  dual_arm.ros2_control.xacro  dual_arm.srdf  dual_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
dual_ur_moveit_config/launch/: demo.launch.py  dual_ur_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dual_ur_moveit_config/src/: hello_moveit.cpp  pose.json
gripper/: package.xml  setup.cfg  setup.py
gripper/gripper/: control.py
hello_moveit/: CMakeLists.txt  package.xml
hello_moveit/launch/: hello_moveit_ur_launch.py
hello_moveit/src/: hello_moveit copy 2.cpp  hello_moveit copy.cpp
ur_description/launch/: view_ur.launch.py
ur_description/rviz/: view_robot.rviz  view_robot_for_driver.rviz
ur_description/urdf/: dual_ur.urdf.xacro  ur.urdf.xacro
ur_driver/ur_robot_driver/: package.xml
urcar_description/: CMakeLists.txt  package.xml
urcar_description/config/: joint_names_All_in_One.yaml
urcar_description/launch/: display.launch  gazebo.launch
urcar_description/meshes/: left_ur_base_link.STL  (+13 more)
(+9 files in other folders)
